--- a/README
+++ b/README
@@ -5,6 +5,8 @@
  ⁃ 機能の修正・追加をしたもの（XMLTVには非準拠）
 • main (https://github.com/steam-circuit/epgdump_py/tree/main)
  ⁃ オリジナルをas-isでフォーク
+• その他
+ ⁃ オリジナルに含まれていたもの
 
 以下、オリジナルのREADME
 ========================================================================================================================
